--- a/src/pages/CSS/Navbar.css
+++ b/src/pages/CSS/Navbar.css
@@ -152,11 +152,11 @@
   }
 }
 
-@media (max-width: 576px) {
+@media (max-width: 480px) {
   .navbar {
     height: 20px;
     align-items: flex-start;
-    width: 100%;
+    width: 95%;
   }
 
   .logo img {
@@ -166,13 +166,13 @@
 
   .nav-icons {
     width: 100%;
-    margin-left: 300px;
+    margin-left: 70%;
     
   }
 
   .search-box {
    
-    max-width: 280px; /* Adjust max-width for mobile */
+    max-width: 240px; /* Adjust max-width for mobile */
     right: 20px; /* Ensure it stays within the viewport */
   }
 
